340. Model 9: Preparing data to create a model capable of predicting into the future

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -5059,7 +5059,7 @@
         "block_reward_3_datetime = np.datetime64(\"2016-07-09\")\n",
         "block_reward_4_datetime = np.datetime64(\"2020-05-18\")"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -5069,7 +5069,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0PYzYkqtPcDl",
-        "outputId": "4c15323e-4111-4044-ca9d-ca31e29b45b2"
+        "outputId": "b80d986c-46ef-4b6b-eb8c-ad18e6c56606"
       },
       "source": [
         "# Create date ranges of where specific block_reward values should be \n",
@@ -5077,7 +5077,7 @@
         "block_reward_3_days = (block_reward_4_datetime - bitcoin_prices.index[0]).days\n",
         "block_reward_2_days, block_reward_3_days"
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5087,7 +5087,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 117
+          "execution_count": 75
         }
       ]
     },
@@ -5106,7 +5106,7 @@
         "bitcoin_prices_block.iloc[block_reward_2_days : block_reward_3_days, -1] = block_reward_3\n",
         "bitcoin_prices_block.iloc[block_reward_3_days :, -1] = block_reward_4"
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -5117,12 +5117,12 @@
           "height": 235
         },
         "id": "6qMkaIEpPJfe",
-        "outputId": "daafe880-5eef-4b7b-c9b5-15443b59c787"
+        "outputId": "7efc75f9-bea1-4edb-e963-f54bdb767aac"
       },
       "source": [
         "bitcoin_prices_block.head()"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5196,7 +5196,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 119
+          "execution_count": 77
         }
       ]
     },
@@ -5208,12 +5208,12 @@
           "height": 235
         },
         "id": "vIcqohncQ79V",
-        "outputId": "d50a5737-0334-4470-9a52-fceefc90a91a"
+        "outputId": "9aa43ef5-9320-45e4-89ea-3ac46ecd8834"
       },
       "source": [
         "bitcoin_prices_block.tail()"
       ],
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5287,7 +5287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 120
+          "execution_count": 78
         }
       ]
     },
@@ -5299,7 +5299,7 @@
           "height": 442
         },
         "id": "VKoBYVN_R2LT",
-        "outputId": "317e491d-95c3-4b27-f5ba-707f91ed6577"
+        "outputId": "3b52a8c8-4adc-41b2-ac6a-d35160391a92"
       },
       "source": [
         "# Plot the block reward vs price over time.\n",
@@ -5309,7 +5309,7 @@
         "                                     index = bitcoin_prices_block.index)\n",
         "scaled_price_block_df.plot(figsize = (10, 7));"
       ],
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5452,7 +5452,7 @@
           "height": 390
         },
         "id": "jPzZntT3VQht",
-        "outputId": "77f74e64-4b01-4e7b-bfd2-2b8ed13536b9"
+        "outputId": "150e67cb-589a-45b1-8c00-7794be2b31f7"
       },
       "source": [
         "# Make a copy of the Bitcoin historical data with block reward feature\n",
@@ -5464,7 +5464,7 @@
         "\n",
         "bitcoin_prices_windowed.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5654,7 +5654,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 80
         }
       ]
     },
@@ -10332,14 +10332,427 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "Yl6D_r10_wtk"
       },
       "source": [
+        "## Model 9 : Train a model on the full historical data to make predictions into the future\n",
+        "\n",
+        "So far all of our models have predicted on the test dataset, however, this is only a pseudofuture.\n",
+        "\n",
+        "Let's now build a model which is capable of predicting into the future !"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OORBsARvHdW-"
+      },
+      "source": [
+        "HORIZON = 1\n",
+        "WINDOW_SIZE = 7"
+      ],
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dnisL1OzHH-m",
+        "outputId": "ca71c678-19ae-43b9-be0a-90c6b6239b73",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "source": [
+        "bitcoin_prices_windowed.head()"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Price</th>\n",
+              "      <th>block_reward</th>\n",
+              "      <th>Price+1</th>\n",
+              "      <th>Price+2</th>\n",
+              "      <th>Price+3</th>\n",
+              "      <th>Price+4</th>\n",
+              "      <th>Price+5</th>\n",
+              "      <th>Price+6</th>\n",
+              "      <th>Price+7</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2013-10-01</th>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>25</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-02</th>\n",
+              "      <td>125.45500</td>\n",
+              "      <td>25</td>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-03</th>\n",
+              "      <td>108.58483</td>\n",
+              "      <td>25</td>\n",
+              "      <td>125.45500</td>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-04</th>\n",
+              "      <td>118.67466</td>\n",
+              "      <td>25</td>\n",
+              "      <td>108.58483</td>\n",
+              "      <td>125.45500</td>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-05</th>\n",
+              "      <td>121.33866</td>\n",
+              "      <td>25</td>\n",
+              "      <td>118.67466</td>\n",
+              "      <td>108.58483</td>\n",
+              "      <td>125.45500</td>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Price block_reward    Price+1  ...  Price+5  Price+6  Price+7\n",
+              "Date                                           ...                           \n",
+              "2013-10-01  123.65499           25        NaN  ...      NaN      NaN      NaN\n",
+              "2013-10-02  125.45500           25  123.65499  ...      NaN      NaN      NaN\n",
+              "2013-10-03  108.58483           25  125.45500  ...      NaN      NaN      NaN\n",
+              "2013-10-04  118.67466           25  108.58483  ...      NaN      NaN      NaN\n",
+              "2013-10-05  121.33866           25  118.67466  ...      NaN      NaN      NaN\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1KQFB29jHbpx",
+        "outputId": "4224c2ec-29a7-47da-a12f-621792d9ec31",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 340
+        }
+      },
+      "source": [
+        "bitcoin_prices_windowed.tail()"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Price</th>\n",
+              "      <th>block_reward</th>\n",
+              "      <th>Price+1</th>\n",
+              "      <th>Price+2</th>\n",
+              "      <th>Price+3</th>\n",
+              "      <th>Price+4</th>\n",
+              "      <th>Price+5</th>\n",
+              "      <th>Price+6</th>\n",
+              "      <th>Price+7</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2021-05-14</th>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "      <td>58788.209679</td>\n",
+              "      <td>57107.120672</td>\n",
+              "      <td>56583.849879</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-15</th>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "      <td>58788.209679</td>\n",
+              "      <td>57107.120672</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-16</th>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "      <td>58788.209679</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-17</th>\n",
+              "      <td>45604.615754</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-18</th>\n",
+              "      <td>43144.471291</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>45604.615754</td>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                   Price block_reward  ...       Price+6       Price+7\n",
+              "Date                                   ...                            \n",
+              "2021-05-14  49764.132082         6.25  ...  57107.120672  56583.849879\n",
+              "2021-05-15  50032.693137         6.25  ...  58788.209679  57107.120672\n",
+              "2021-05-16  47885.625255         6.25  ...  58102.191426  58788.209679\n",
+              "2021-05-17  45604.615754         6.25  ...  55715.546651  58102.191426\n",
+              "2021-05-18  43144.471291         6.25  ...  56573.555472  55715.546651\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NaK5iEYfHnic",
+        "outputId": "f649ca64-74e6-43ad-96ee-c0d3a565bc07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Train model on entire data to make prediction for the next day\n",
+        "X_all = bitcoin_prices_windowed.dropna().drop([\"Price\", \"block_reward\"], axis = 1).to_numpy()\n",
+        "# Get labels\n",
+        "y_all = bitcoin_prices_windowed.dropna()[\"Price\"].to_numpy()\n",
+        "\n",
+        "len(X_all), len(y_all)"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2780, 2780)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6n50HLhqIFpu",
+        "outputId": "7d1b405c-ca34-4fa3-f9de-91260b4edf0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X_all[:5], y_all[:5]"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[121.795  , 120.65533, 121.33866, 118.67466, 108.58483, 125.455  ,\n",
+              "         123.65499],\n",
+              "        [123.033  , 121.795  , 120.65533, 121.33866, 118.67466, 108.58483,\n",
+              "         125.455  ],\n",
+              "        [124.049  , 123.033  , 121.795  , 120.65533, 121.33866, 118.67466,\n",
+              "         108.58483],\n",
+              "        [125.96116, 124.049  , 123.033  , 121.795  , 120.65533, 121.33866,\n",
+              "         118.67466],\n",
+              "        [125.27966, 125.96116, 124.049  , 123.033  , 121.795  , 120.65533,\n",
+              "         121.33866]]),\n",
+              " array([123.033  , 124.049  , 125.96116, 125.27966, 125.9275 ]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EMZlFpfRIPbL",
+        "outputId": "7a38421c-a2d8-4afa-eb67-fecf44b0548a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn data into efficient running tensors\n",
+        "features_dataset_all = tf.data.Dataset.from_tensor_slices(X_all)\n",
+        "labels_dataset_all = tf.data.Dataset.from_tensor_slices(y_all)\n",
+        "\n",
+        "# Combine features and labels\n",
+        "dataset_all = tf.data.Dataset.zip((features_dataset_all, labels_dataset_all))\n",
+        "\n",
+        "# Batch and prefetch for optimal performance\n",
+        "BATCH_SIZE = 1024\n",
+        "dataset_all = dataset_all.batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "dataset_all"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<PrefetchDataset shapes: ((None, 7), (None,)), types: (tf.float64, tf.float64)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UXwXXGvLI2LD"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     }
   ]
