341. Model 9: Building, compiling and fitting a future predictions model

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10359,12 +10359,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dnisL1OzHH-m",
-        "outputId": "ca71c678-19ae-43b9-be0a-90c6b6239b73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "dnisL1OzHH-m",
+        "outputId": "ca71c678-19ae-43b9-be0a-90c6b6239b73"
       },
       "source": [
         "bitcoin_prices_windowed.head()"
@@ -10501,12 +10501,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1KQFB29jHbpx",
-        "outputId": "4224c2ec-29a7-47da-a12f-621792d9ec31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 340
-        }
+        },
+        "id": "1KQFB29jHbpx",
+        "outputId": "4224c2ec-29a7-47da-a12f-621792d9ec31"
       },
       "source": [
         "bitcoin_prices_windowed.tail()"
@@ -10643,11 +10643,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NaK5iEYfHnic",
-        "outputId": "f649ca64-74e6-43ad-96ee-c0d3a565bc07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NaK5iEYfHnic",
+        "outputId": "f649ca64-74e6-43ad-96ee-c0d3a565bc07"
       },
       "source": [
         "# Train model on entire data to make prediction for the next day\n",
@@ -10674,11 +10674,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6n50HLhqIFpu",
-        "outputId": "7d1b405c-ca34-4fa3-f9de-91260b4edf0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6n50HLhqIFpu",
+        "outputId": "7d1b405c-ca34-4fa3-f9de-91260b4edf0b"
       },
       "source": [
         "X_all[:5], y_all[:5]"
@@ -10710,11 +10710,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EMZlFpfRIPbL",
-        "outputId": "7a38421c-a2d8-4afa-eb67-fecf44b0548a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EMZlFpfRIPbL",
+        "outputId": "7a38421c-a2d8-4afa-eb67-fecf44b0548a"
       },
       "source": [
         "# Turn data into efficient running tensors\n",
@@ -10747,10 +10747,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UXwXXGvLI2LD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UXwXXGvLI2LD",
+        "outputId": "190b10ec-511e-475e-8ba7-8145ca171cef"
       },
       "source": [
-        ""
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# Create the model\n",
+        "model_9 = tf.keras.Sequential([\n",
+        "        layers.Dense(128, activation=\"relu\"),\n",
+        "        layers.Dense(128, activation=\"relu\"),\n",
+        "        layers.Dense(HORIZON)\n",
+        "], name=\"model_9_future_model\")\n",
+        "\n",
+        "# Compile the model\n",
+        "model_9.compile(loss=\"mae\", \n",
+        "                optimizer = tf.keras.optimizers.Adam())\n",
+        "\n",
+        "# Fit the model on all of the data to make future forecasts\n",
+        "model_9.fit(dataset_all,\n",
+        "            epochs = 100,\n",
+        "            verbose = 0)\n"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f43a819f990>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hdWMmfSDKbkv"
+      },
+      "source": [
+        "# "
       ],
       "execution_count": null,
       "outputs": []
