342. Model 9: Discussing what's required for our model to make future predictions

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10751,7 +10751,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UXwXXGvLI2LD",
-        "outputId": "190b10ec-511e-475e-8ba7-8145ca171cef"
+        "outputId": "4aab7974-7e15-43b5-9cfe-c6be110f05a5"
       },
       "source": [
         "tf.random.set_seed(42)\n",
@@ -10772,30 +10772,68 @@
         "            epochs = 100,\n",
         "            verbose = 0)\n"
       ],
-      "execution_count": 90,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f43a819f990>"
+              "<keras.callbacks.History at 0x7f43a712ca90>"
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 91
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hdWMmfSDKbkv"
+      },
+      "source": [
+        "> **Resources** : Understanding important facts about running a time series model\n",
+        "https://towardsdatascience.com/3-facts-about-time-series-forecasting-that-surprise-experienced-machine-learning-practitioners-69c18ee89387"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FAFAcEOsLLi6"
+      },
+      "source": [
+        "### Make predictions into future"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hdWMmfSDKbkv"
+        "id": "I0DAcgDQNJVu"
       },
       "source": [
-        "# "
+        "# How many timesteps to predict into the future ?\n",
+        "INTO_FUTURE = 14"
       ],
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "piqaf8noOfYb"
+      },
+      "source": [
+        "To make predictions into future we want a function which :\n",
+        "1. Takes as input :\n",
+        "  * a list of values(Bitcoin historical data)\n",
+        "  * a trained model (such as `model_9`)\n",
+        "  * a window into the future to predict (our `INTO_FUTURE` variable)\n",
+        "  * the window size a model was trained on (`WINDOW_SIZE`) - the model can only predict on the same kind of data it was trained on\n",
+        "\n",
+        "2. Creates an empty list for future forecasts (this will be returned at the end of the end, when it's full of predictions) and extracts the last `WINDOW_SIZE` values from the input values\n",
+        "\n",
+        "3. Loop `INTO_FUTURE` times making a prediction on `WINDOW_SIZE` sequences which update to remove the first value and append the latest prediction"
+      ]
     }
   ]
 }
