343. Model 9: Creating a function to make forecasts into the future

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10834,6 +10834,303 @@
         "\n",
         "3. Loop `INTO_FUTURE` times making a prediction on `WINDOW_SIZE` sequences which update to remove the first value and append the latest prediction"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o0QP3kVwRF_P",
+        "outputId": "cfce128c-8f00-47f8-e34c-54949e6d767b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.expand_dims(y_all[-WINDOW_SIZE:], axis = 0)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 7), dtype=float64, numpy=\n",
+              "array([[56573.5554719 , 52147.82118698, 49764.1320816 , 50032.69313676,\n",
+              "        47885.62525472, 45604.61575361, 43144.47129086]])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZmQlIhJfPtZo"
+      },
+      "source": [
+        "# 1. Create function to make predictions into the future\n",
+        "def make_future_forecasts(values, model, into_future, window_size = WINDOW_SIZE) -> list :\n",
+        "  \"\"\"\n",
+        "  Make future forecasts into_future steps after values ends.\n",
+        "  \n",
+        "  Returns future forecasts as a list of floats\n",
+        "  \"\"\"\n",
+        "  # 2. Create an empty list for future forecasts/prepare data to forecast on\n",
+        "  future_forecast = []\n",
+        "  last_window = values[-WINDOW_SIZE :]\n",
+        "\n",
+        "  # 3. Make INTO_FUTURE number of predictions, altering the data which gets prediction on each\n",
+        "  for _ in range(into_future) :\n",
+        "\n",
+        "    # Predict on the last window then append it again, again, again (our model will eventually start to make forecasts on its own forecasts)\n",
+        "    future_pred = model.predict(tf.expand_dims(last_window, axis = 0))\n",
+        "    print(f\"Predicting on :\\n {last_window} -> Predicton: {tf.squeeze(future_pred).numpy()}\\n\")\n",
+        "\n",
+        "    # Append predictions to future_forecast\n",
+        "    future_forecast.append(tf.squeeze(future_pred).numpy())\n",
+        "\n",
+        "    # Update last window with new pred and get WINDOW_SIZE most recent preds(model was trained on WINDOW_SIZE)\n",
+        "    last_window = np.append(last_window, future_pred)[-WINDOW_SIZE :]\n",
+        "  \n",
+        "  return future_forecast\n",
+        "\n"
+      ],
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PgsVZpIZTTwu"
+      },
+      "source": [
+        "> **Exercise** : We need to retrain the model each time the new prediction is added to the input"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HdY_ieFpT90a",
+        "outputId": "a60e7e2f-8800-4dbc-9a6b-c544263d46c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make forecasts into the future\n",
+        "future_forecast = make_future_forecasts(values = y_all,\n",
+        "                                        model = model_9,\n",
+        "                                        into_future = INTO_FUTURE, \n",
+        "                                        window_size = WINDOW_SIZE)"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Predicting on :\n",
+            " [56573.5554719  52147.82118698 49764.1320816  50032.69313676\n",
+            " 47885.62525472 45604.61575361 43144.47129086] -> Predicton: 55764.46484375\n",
+            "\n",
+            "Predicting on :\n",
+            " [52147.82118698 49764.1320816  50032.69313676 47885.62525472\n",
+            " 45604.61575361 43144.47129086 55764.46484375] -> Predicton: 50985.9453125\n",
+            "\n",
+            "Predicting on :\n",
+            " [49764.1320816  50032.69313676 47885.62525472 45604.61575361\n",
+            " 43144.47129086 55764.46484375 50985.9453125 ] -> Predicton: 48522.96484375\n",
+            "\n",
+            "Predicting on :\n",
+            " [50032.69313676 47885.62525472 45604.61575361 43144.47129086\n",
+            " 55764.46484375 50985.9453125  48522.96484375] -> Predicton: 48137.203125\n",
+            "\n",
+            "Predicting on :\n",
+            " [47885.62525472 45604.61575361 43144.47129086 55764.46484375\n",
+            " 50985.9453125  48522.96484375 48137.203125  ] -> Predicton: 47880.63671875\n",
+            "\n",
+            "Predicting on :\n",
+            " [45604.61575361 43144.47129086 55764.46484375 50985.9453125\n",
+            " 48522.96484375 48137.203125   47880.63671875] -> Predicton: 46879.71875\n",
+            "\n",
+            "Predicting on :\n",
+            " [43144.47129086 55764.46484375 50985.9453125  48522.96484375\n",
+            " 48137.203125   47880.63671875 46879.71875   ] -> Predicton: 48227.6015625\n",
+            "\n",
+            "Predicting on :\n",
+            " [55764.46484375 50985.9453125  48522.96484375 48137.203125\n",
+            " 47880.63671875 46879.71875    48227.6015625 ] -> Predicton: 53963.69140625\n",
+            "\n",
+            "Predicting on :\n",
+            " [50985.9453125  48522.96484375 48137.203125   47880.63671875\n",
+            " 46879.71875    48227.6015625  53963.69140625] -> Predicton: 49685.55859375\n",
+            "\n",
+            "Predicting on :\n",
+            " [48522.96484375 48137.203125   47880.63671875 46879.71875\n",
+            " 48227.6015625  53963.69140625 49685.55859375] -> Predicton: 47596.17578125\n",
+            "\n",
+            "Predicting on :\n",
+            " [48137.203125   47880.63671875 46879.71875    48227.6015625\n",
+            " 53963.69140625 49685.55859375 47596.17578125] -> Predicton: 48114.4296875\n",
+            "\n",
+            "Predicting on :\n",
+            " [47880.63671875 46879.71875    48227.6015625  53963.69140625\n",
+            " 49685.55859375 47596.17578125 48114.4296875 ] -> Predicton: 48808.0078125\n",
+            "\n",
+            "Predicting on :\n",
+            " [46879.71875    48227.6015625  53963.69140625 49685.55859375\n",
+            " 47596.17578125 48114.4296875  48808.0078125 ] -> Predicton: 48623.85546875\n",
+            "\n",
+            "Predicting on :\n",
+            " [48227.6015625  53963.69140625 49685.55859375 47596.17578125\n",
+            " 48114.4296875  48808.0078125  48623.85546875] -> Predicton: 50178.72265625\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9gzeSsfPU8Lq",
+        "outputId": "461e4383-3a3f-4af7-d3af-7dd2dddf58fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 340
+        }
+      },
+      "source": [
+        "bitcoin_prices_windowed.tail()"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Price</th>\n",
+              "      <th>block_reward</th>\n",
+              "      <th>Price+1</th>\n",
+              "      <th>Price+2</th>\n",
+              "      <th>Price+3</th>\n",
+              "      <th>Price+4</th>\n",
+              "      <th>Price+5</th>\n",
+              "      <th>Price+6</th>\n",
+              "      <th>Price+7</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2021-05-14</th>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "      <td>58788.209679</td>\n",
+              "      <td>57107.120672</td>\n",
+              "      <td>56583.849879</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-15</th>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "      <td>58788.209679</td>\n",
+              "      <td>57107.120672</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-16</th>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "      <td>58788.209679</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-17</th>\n",
+              "      <td>45604.615754</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "      <td>58102.191426</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-18</th>\n",
+              "      <td>43144.471291</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>45604.615754</td>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>52147.821187</td>\n",
+              "      <td>56573.555472</td>\n",
+              "      <td>55715.546651</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                   Price block_reward  ...       Price+6       Price+7\n",
+              "Date                                   ...                            \n",
+              "2021-05-14  49764.132082         6.25  ...  57107.120672  56583.849879\n",
+              "2021-05-15  50032.693137         6.25  ...  58788.209679  57107.120672\n",
+              "2021-05-16  47885.625255         6.25  ...  58102.191426  58788.209679\n",
+              "2021-05-17  45604.615754         6.25  ...  55715.546651  58102.191426\n",
+              "2021-05-18  43144.471291         6.25  ...  56573.555472  55715.546651\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ]
     }
   ]
 }
